-Refactor -Minor bug fixes -Readme updated